--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -4,6 +4,8 @@ jobs:
     first-job: 
         runs-on: ubuntu-latest
         steps:
+        - name: checkout
+          uses: actions/checkout@v5
         - name: Welcome Message
           run: echo "My first github account job"
 
