--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -11,4 +11,6 @@ jobs:
           run: ls -lart
 
         - name: Executing ascii script
-          run: ./ascii-script.sh
+          run: |
+            chmod 755 ascii-script.sh
+            ./ascii-script.sh
