--- a/.github/workflows/multiple-job.yml
+++ b/.github/workflows/multiple-job.yml
@@ -22,6 +22,9 @@ jobs:
     deploy-job-3:
         runs-on: ubuntu-latest
         steps:
+        - name: Read File
+          run: cat dragon.txt
+          
         - name: deploying
           run: echo "Deploying......"
           
