--- a/.github/workflows/multiple-job.yml
+++ b/.github/workflows/multiple-job.yml
@@ -9,22 +9,36 @@ jobs:
         
         - name: generate ASCII art 
           run: cowsay -f dragon "Run for cover, I am a DRAGON.....RAWR" >> dragon.txt
+
+        - name: upload artifact 
+          uses: actions/upload-artifact@v4
+          with:
+            name: my-artifact
+            path: dragon.txt
         
     test-job-2:
         runs-on: ubuntu-latest
+        needs: build-job-1
         steps:
-        - name: sleep 30 seconds
-          run: sleep 30
+        - name: Download Artifacts
+          uses: actions/download-artifact@v5
+          with:
+            name: my-artifact
         
         - name: check the file
           run: grep -i "dragon" dragon.txt
 
     deploy-job-3:
         runs-on: ubuntu-latest
+        needs: [test-job-2]
         steps:
+        - name: Download Artifacts
+          uses: actions/download-artifact@v5
+          with:
+            name: my-artifact
+        
         - name: Read File
           run: cat dragon.txt
-          
+
         - name: deploying
-          run: echo "Deploying......"
-          
+          run: echo "Deploying......"         
