--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -1,7 +1,8 @@
 name: Exploring variables and secrets
 on: 
-  schedule:
-    - cron: "* * * * *"
+  workflow_dispatch: 
+#  schedule:
+#    - cron: "* * * * *"
 #  push
 env:
     CONTAINER_REGISTRY: docker.io
