--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -37,6 +37,12 @@ jobs:
     deploy:
         needs: docker
         runs-on: ubuntu-latest
+        concurrency: 
+          group: production-deployment
+          cancel-in-progress: true
         steps:
         - name: Docker Run
           run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+
+        - name: sleep mode
+          run: sleep 600s
