--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -39,7 +39,7 @@ jobs:
         runs-on: ubuntu-latest
         concurrency: 
           group: production-deployment
-          cancel-in-progress: true
+          cancel-in-progress: false
         steps:
         - name: Docker Run
           run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
