--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -42,6 +42,7 @@ jobs:
           cancel-in-progress: false
         steps:
         - name: Docker Run
+          timeout-minutes: 1
           run: echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
 
         - name: sleep mode
