--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -12,7 +12,7 @@ jobs:
                     - os: windows-latest
                       images: alpine
                 include: 
-                    - os: unbuntu-24.04
+                    - os: ubuntu-24.04
                       images: amd64/alpine
         runs-on: ${{ matrix.os }}
         steps:
