--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -36,6 +36,7 @@ jobs:
 
     deploy:
         needs: docker
+        if: github.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         concurrency: 
           group: production-deployment
