--- a/.github/workflows/workflow-filtering.yml
+++ b/.github/workflows/workflow-filtering.yml
@@ -10,8 +10,8 @@ on:
             - closed
         branches: 
             - main
-        paths-ignore: 
-            - README.md 
+#        paths-ignore: 
+#            - README.md 
 
 jobs: 
     hello:
